Inclusao de endpoint de delecao de veiculo
